appId: com.breakfree.app
---
- launchApp
- tapOn: 'Profil'
- tapOn: 'Bildirimler'
- assertVisible: 'Bildirimler'
